src/main/resources/Krakatau-master/tests/assembler/bad/nametoolong.j
###preprocess###
.class public ###range(65536,):xxxx###
.super java/lang/Object
.end class
